objects/SharePointOAuth__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Access_Token_1__c</fullName>
        <label>Access Token 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Token_2__c</fullName>
        <label>Access Token 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Token_3__c</fullName>
        <label>Access Token 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Token_Expiration__c</fullName>
        <label>Access_Token_Expiration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <label>Client ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Redirect_URI__c</fullName>
        <label>Redirect URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refresh_Token_1__c</fullName>
        <label>Refresh Token 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refresh_Token_2__c</fullName>
        <label>Refresh Token 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>SharePoint OAuth</label>
</CustomObject>